# University

./: .gitignore  Guess the digit.asm
Assembly/: Guess the digit.asm  README.md
Assembly/Dissasembler/: Dissassembler.asm
Axure/MyDay - Dominiko ir Marijos maketas/: app_home.html  darbo_tvarkara_tis_choose.html  darbo_tvarkara_tis_day.html  darbo_tvarkara_tis_week.html  from.html  from_1.html  from_2.html  kalendorius.html  kalendorius_2014.html  kalendorius_2016.html  kalendorius_diena.html  kalendorius_metai.html  moksl__tvarkara_tis_choose.html  moksl__tvarkara_tis_day.html  moksl__tvarkara_tis_week.html  terminai.html  terminai_choose.html  terminai_day.html  to.html  to_1.html  to_2.html
Axure/MyDay - Galutinis maketas/: app_home.html  contacts.html  darbo_tvarkara_tis_choose.html  darbo_tvarkara_tis_day.html  darbo_tvarkara_tis_week.html  from.html  from_1.html  from_2.html  kaledos.html  kalendorius.html  kalendorius_2014.html  (+19 more)
C/: Rekurencijne formule.c
Dissasembler/: Dissasembler.asm  Dissassembler.asm
Haskell/FP-2-uzd/: Uzd2.cabal
Haskell/FP-2-uzd/app/: Main.hs
Haskell/FP-2-uzd/src/: AI.hs  Game.hs  Http.hs  Types.hs
Haskell/FP-2-uzd/src/MExpression/: Parse.hs  Serialize.hs
Haskell/FP-2-uzd/test/: Spec.hs
Interneto technologijos/: Interneto technologijos XML for XPath.txt  Interneto technologijos XML.xml  Interneto technologijos XSLT.xslt  Schema.xsd  Tomas.xml  TomasXSLT.xslt  XML 4min.xsd  XML 5min.xsd  XML 6min.xsd  XML 7min.xml  XML 8min.xml  XML.xml  XMLSchema 4min.xsd  XMLSchema 5min.xsd  XMLSchema 6min.xsd  XPath Uzklausos.txt  XSLT 7min.xslt  XSLT.xslt  xpath 3 mini.txt
(+765 files in other folders)
