name:                Uzd2
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/Uzd2#readme
license:             BSD3
license-file:        LICENSE
author:              Dominik Lisovski
maintainer:          Dominik.Lisovski@gmail.com
copyright:           2016 Dominik Lisovski
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Game
                     , Types
                     , MExpression.Parse
                     , MExpression.Serialize
                     , AI
                     , Http
  build-depends:       base >=4.9 && <4.10 
                     , http-client
                     , bytestring
                     , containers
                     , lens
                     , wreq
  default-language:    Haskell2010

executable Uzd2-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Uzd2
  default-language:    Haskell2010

test-suite Uzd2-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Uzd2
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010